syntax = "proto3";
package types;

option go_package = "github.com/canopy-network/canopy/lib";

import "google/protobuf/any.proto";

message Event {
  // event_type: The type of the transaction like 'slash' or 'unstake'
  string event_type = 1; // @gotags: json:"eventType"
  // msg: The actual event message payload, which is encapsulated in a generic message format
  google.protobuf.Any msg = 2;
  // block_height: the number of blocks in the blockchain before a specific block, indicating its position in the chain
  // and representing the blockchain's length
  uint64 block_height = 3;  // @gotags: json:"blockHeight"
  // block_hash: a unique identifier for a block, generated by applying a cryptographic hash function to the block's contents,
  // ensuring its integrity and connecting it to the previous block in the chain.
  bytes block_hash = 4;  // @gotags: json:"blockHash"
  // address: The address of the user affected by the event
  bytes address = 5;
}

message EventReward {
  // amount: amount of reward
	uint64 amount = 1;
}

message EventSlash {
}

message EventAutoPause {
}

message EventAutoUnstake {
}

message EventAutoUnstaking {
}